# imnot

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  cliff.toml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
docs/: design-going-public.md  design-mirage-generate.md  design-postman.md  design-push.md
imnot/: __init__.py  cli.py  partners.py  postman.py
imnot/api/: server.py
imnot/engine/: __init__.py  router.py  session_store.py
imnot/engine/patterns/: __init__.py  async_.py  fetch.py  oauth.py  push.py  static.py
imnot/loader/: yaml_loader.py
mirage/: __init__.py  cli.py  partners.py  postman.py
mirage/api/: __init__.py  server.py
mirage/engine/: router.py  session_store.py
mirage/engine/patterns/: __init__.py  async_.py  fetch.py  oauth.py  poll.py  push.py  static.py
mirage/loader/: __init__.py  yaml_loader.py
partners/: README.md
partners/leanpms/: partner.yaml
partners/ohip/: partner.yaml
partners/staylink/: partner.yaml
scripts/: smoke_test.sh
tests/: test_async_pattern.py  test_cli.py  test_docs.py  test_fetch_pattern.py  test_oauth_pattern.py  test_partners.py  test_poll_pattern.py  test_postman.py  test_push_pattern.py  test_router.py  test_server.py  test_session_store.py  test_static_pattern.py  test_yaml_loader.py
